Tests/Parse/invalid-parameters.silt
-- RUN: %silt --verify parse %s

module InvalidParameters where

foo : {A.x : Type} -> A -> A --expected-error{{qualified name 'A.x' is not allowed in this position}}
foo x = x
